aspnetcore: Update to 2.1 and refactorings
There is now one data processor for prometheus and one data processor for
influxdb.

--- a/src/IoTLogger/appsettings.json
+++ b/src/IoTLogger/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "apiKey": "changeit",
 
   "Serilog": {
@@ -46,13 +46,8 @@
     "SupportsCredentials": true
   },
 
-  "SwaggerDoc": {
-    "Title": "IoTLogger",
-    "Version": "v1",
-    "Description": "This web api is capable of logging values from IoT devices.",
-    "TermsOfService": "None",
-    "Contact": {
-      "Url": "https://github.com/nalla/iot-logger"
-    }
-  }
+  "influxdb": {
+    "url": "http://10.0.0.5:8086",
+    "database": "iot"
+  } 
 }
